--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -21,6 +21,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <WrapPanel Grid.Row="0" Grid.Column="0">
                     <TextBlock Margin = "3" FontWeight ="Bold" VerticalAlignment="Center" Text="Номер заявки:"/>
@@ -38,12 +39,12 @@
                 </WrapPanel>
                     <WrapPanel Grid.Row="1" Grid.Column="0">
                     <!--<WrapPanel IsEnabled="{Binding CanSave}" Grid.Row="1" Grid.Column="0">-->
-                    <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
+                    <!--<TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
                     <ComboBox IsEnabled ="{Binding CanSave}" Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCompany}" ItemsSource="{Binding CompanyList}" IsEditable="True" >
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
-                    </ComboBox>
+                    </ComboBox>-->
 
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Услуга:"/>
                     <ComboBox IsEnabled ="{Binding CanSave}" Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
@@ -83,22 +84,29 @@
                         </ComboBox.Resources>
                     </ComboBox>
                     <CheckBox Margin="3" VerticalAlignment="Center" IsChecked="{Binding ShowAllExecuters}" Visibility="Collapsed">Все</CheckBox>
-                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата:"/>
-                    <DatePicker  Margin="3" IsEnabled="{Binding CanSave}" Width="100" SelectedDate="{Binding SelectedDateTime}">
+                    </WrapPanel>
+                <WrapPanel Grid.Row="3" Grid.Column="0">
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата:"/>
+                    <DatePicker  Margin="3"  VerticalAlignment="Center" IsEnabled="{Binding CanSave}" Width="100" SelectedDate="{Binding SelectedDateTime}">
                     </DatePicker>
                     <DockPanel>
                         <TextBlock Margin="3" VerticalAlignment="Center" Text="Время:"/>
-                        <ComboBox Margin="3" IsEnabled="{Binding CanSave}" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
+                        <ComboBox Margin="3"  VerticalAlignment="Center" IsEnabled="{Binding CanSave}" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
                             <ComboBox.Resources>
                                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                             </ComboBox.Resources>
                         </ComboBox>
                     </DockPanel>
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Срок исполнения:"/>
-                    <DatePicker  Margin="3" Width="100" SelectedDate="{Binding TermOfExecution}">
+                    <DatePicker  Margin="3"  VerticalAlignment="Center" Width="100" SelectedDate="{Binding TermOfExecution}">
                     </DatePicker>
+                    <Button Margin="5" Width="32" Height="32" Command="{Binding ElementName=RequestGrid, Path=DataContext.OpenCalendarCommand}"
+                            CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">
+                        <Image Source="pack://application:,,,/Images/Calendar_small.png"/>
+                    </Button>
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="{Binding SelectedAppointment}"/>
                 </WrapPanel>
-                <WrapPanel Grid.Row="3" Grid.Column="0">
+                <WrapPanel Grid.Row="4" Grid.Column="0">
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Примечание:"/>
                     <TextBox Margin="3" Width="600" Height="64"
                              SpellCheck.IsEnabled="True"
@@ -113,7 +121,7 @@
                         <Image Source="pack://application:,,,/Images/edit_small.png"/>
                     </Button>
                 </WrapPanel>
-                <WrapPanel Grid.Row="4" Grid.Column="0">
+                <WrapPanel Grid.Row="5" Grid.Column="0">
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Напоминанить в:"/>
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="{Binding AlertTime, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
                     <Button Margin="5" Width="32" Height="32" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeAlertTimeCommand}"
@@ -129,13 +137,13 @@
                     </ComboBox>
 
                 </WrapPanel>
-                <WrapPanel Grid.Row="5" Grid.Column="0" Visibility="{Binding ShowRating}">
+                <WrapPanel Grid.Row="6" Grid.Column="0" Visibility="{Binding ShowRating}">
                     <TextBlock Margin="3" Text="Оценка:"/>
                     <TextBlock Margin="3" Text="{Binding Rating.Name}"/>
                     <TextBlock Margin="3" Text="Комментарий:"/>
                     <TextBlock Margin="3" Text="{Binding Rating.Description}" TextWrapping="Wrap" Width="460"/>
                 </WrapPanel>
-                <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="5">
+                <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="7">
                     <Button Margin="3" Width="130" Height="22" Command="{Binding ElementName=RequestGrid, Path=DataContext.SaveRequestCommand}"
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Сохранить</Button>
                     <!--<Button Margin="5" Width="140" Height="24" IsEnabled ="{Binding CanSave}" Command="{Binding ElementName=RequestGrid, Path=DataContext.SaveRequestCommand}"
