--- a/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:admin="clr-namespace:CRMPhone.ViewModel.Admins"
         mc:Ignorable="d"
-        Title="Дома" Height="320" Width="280" MinWidth ="280" MinHeight="320"
+        Title="Дома" Height="320" Width="280" MinWidth ="280" MinHeight="370"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance admin:HouseAdminDialogViewModel}">
@@ -52,6 +52,14 @@
             <DockPanel>
                 <TextBlock Margin="5" VerticalAlignment="Center" Text="Кол-во квартир:"/>
                 <TextBox Margin="5" HorizontalAlignment="Right" Width="60" MaxLength="5" TextWrapping="Wrap" Text="{Binding FlatsCount}"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Кол-во лифтов:"/>
+                <TextBox Margin="5" HorizontalAlignment="Right" Width="60" MaxLength="5" TextWrapping="Wrap" Text="{Binding ElevatorCount}"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Есть паркинг:"/>
+                <CheckBox Margin="5" HorizontalAlignment="Right" Width="60" IsChecked="{Binding HaveParking}"/>
             </DockPanel>
             <DockPanel>
                 <TextBlock Margin="5" VerticalAlignment="Center" Text="Ввод у эксплуатацию:"/>
