--- a/CRMPhone/Dialogs/Admins/WorkerAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/WorkerAddOrEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:admins="clr-namespace:CRMPhone.ViewModel.Admins"
         mc:Ignorable="d"
-        Title="Исполнитель" Height="330" Width="320" MinWidth ="320" MinHeight="330"
+        Title="Исполнитель" Height="390" Width="320" MinWidth ="320" MinHeight="390"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance admins:WorkerAdminDialogViewModel}">
@@ -26,7 +26,7 @@
         <StackPanel Grid.Row="1">
             <DockPanel>
                 <TextBlock Margin="5" VerticalAlignment="Center" Text="Руководитель:"/>
-                <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedParentWorker}" ItemsSource="{Binding ParentWorkerList}">
+                <ComboBox Margin="5" IsEditable="True" HorizontalAlignment="Right" Width="185" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedParentWorker}" ItemsSource="{Binding ParentWorkerList}">
                     <ComboBox.Resources>
                         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                     </ComboBox.Resources>
@@ -61,9 +61,26 @@
                 </TextBox>
             </DockPanel>
             <DockPanel>
-                <CheckBox Margin="5" IsChecked="{Binding Path=IsMaster}">Мастер</CheckBox>
-                <CheckBox Margin="5" IsChecked="{Binding Path=CanAssign}">Может выполнять заявки</CheckBox>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Логин:"/>
+                <TextBox Margin="5" HorizontalAlignment="Right" Width="185" MaxLength="255" TextWrapping="Wrap" Text="{Binding Login}">
+                </TextBox>
             </DockPanel>
+            <DockPanel>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Пароль:"/>
+                <TextBox Margin="5" HorizontalAlignment="Right" Width="185" MaxLength="255" TextWrapping="Wrap" Text="{Binding Password}">
+                </TextBox>
+            </DockPanel>
+            <StackPanel>
+            <DockPanel>
+                <CheckBox Margin="5" IsChecked="{Binding Path=IsMaster}">Мастер</CheckBox>
+                <CheckBox Margin="5" IsChecked="{Binding Path=IsExecuter}">Исполнитель</CheckBox>
+                <CheckBox Margin="5" IsChecked="{Binding Path=IsDispetcher}">Диспетчер</CheckBox>
+            </DockPanel>
+                <DockPanel>
+                    <CheckBox Margin="5" IsChecked="{Binding Path=SendSms}">Отпр. SMS</CheckBox>
+                    <CheckBox Margin="5" IsChecked="{Binding Path=CanAssign}">Выполняет заявки</CheckBox>
+                </DockPanel>
+            </StackPanel>
         </StackPanel>
         <StackPanel Grid.Row="2" HorizontalAlignment="Right">
             <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
