[~] - Что-то много всякого

--- a/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
@@ -68,6 +68,15 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTextColumn Header="Логин" Width="*"
+                                    Binding="{Binding Path=Login}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTemplateColumn Width="*" >
                     <DataGridTemplateColumn.HeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
